# ilya_s-voice-assistant-qt6

./: CMakeLists.txt  README.md  audiorecorder.cpp  audiorecorder.h  main.cpp  mainwindow.cpp  mainwindow.h  sliderbutton.cpp  sliderbutton.h
res/: style1.qss
